fix: align nr listeners.

--- a/src/common/components/Header/styles.module.scss
+++ b/src/common/components/Header/styles.module.scss
@@ -132,6 +132,10 @@
       gap: 4px;
       margin-top: 10px;
       margin-bottom: 20px;
+
+      span {
+        margin-top: 3px;
+      }
     }
 
     .nr_listeners {
